@@ -21,7 +21,7 @@ $Result 	= new Result ();
 $User->check_user_session();
 
 # create csrf token
-$csrf = $User->csrf_cookie ("create", "subnet");
+$csrf = $_POST['action']=="add" ? $User->csrf_cookie ("create", "subnet_add") : $User->csrf_cookie ("create", "subnet_".$_POST['subnetId']);
 
 # strip tags - XSS
 $_POST = $User->strip_input_tags ($_POST);
